[package]
name = "shadow_drive_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-drive-rust = "0.4.0"
actix-rt = "1.0.0"
solana-sdk = "1.10.29"
byte-unit = "4.0.14"
tokio = {version = "^1", features = ["full"]}
tokio-stream = {version = "^0.1", features = ["fs"]}
futures = "^0.3"
actix-web = { version = "4.0.0-beta.10" }
rocket = {version ="0.5.0-rc.1", features=["json"]}
serde = { version = "1.0", features = ["derive"] }






